fix: Improve contrast

--- a/src/app/_components/footer.module.css
+++ b/src/app/_components/footer.module.css
@@ -14,5 +14,5 @@
   height: auto;
   padding: 20px;
   font-size: 1.3rem;
-  color: #9eabb3;
+  color: #4b5563;
 }
