--- a/src/app/_components/header.module.css
+++ b/src/app/_components/header.module.css
@@ -6,14 +6,14 @@
   line-height: 55px;
   text-align: center;
   background: #fff;
-  border: 1px solid #eef2f8;
+  border: 1px solid #d1d5db;
 }
 
 .title {
   font-size: 1.6rem;
   font-weight: 400;
   line-height: 55px;
-  color: #88909a;
+  color: #4b5563;
   text-align: center;
 }
 
